# fastapi_base

./: .env.example  .env_local  .gitignore  ARCHITECTURE.md  Dockerfile  LOGGING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: examples_logging.py  main.py  main_config.py
app/core/: __init__.py  auth.py  base_repository.py  config_loader.py  database.py  dependencies.py  enums.py  http_calls.py  lifespan.py  logging_config.py  rest_api.py  route_discovery.py  secrets.py  secrets_providers.py
app/core/exceptions/: __init__.py  handlers.py  http_exceptions.py
app/env_files/: .env.example  .env_base  .env_local  .secrets_local.example
app/models/: __init__.py  base.py  event.py  image.py  product.py
app/repository/: __init__.py  event_repository.py  image_repository.py  product_repository.py
app/routes/: auth_examples.py  health.py  product.py  test_exceptions.py  timed_cache.py
app/schemas/: __init__.py  base.py
app/utils/: client_pool.py
scripts/: README.md  migrate_data.py
tests/: README.md  conftest.py  test_exceptions.py
