[project]
name = "eventually-backend"
version = "0.1.0"
description = "Opinionated FastAPI base template with async SQLAlchemy, httpx connection pooling, and Pydantic-driven configuration. Production-ready with repository pattern, dependency injection, and environment-aware settings."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sanket", email = "sanketwagh147@gmail.com" }
]
keywords = ["fastapi", "sqlalchemy", "async", "pydantic", "httpx", "template", "microservices", "rest-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

# Core dependencies required for the application - async-first stack
dependencies = [
    "fastapi>=0.109.0",           # Modern async web framework with OpenAPI
    "uvicorn[standard]>=0.27.0",  # ASGI server with auto-reload
    "sqlalchemy[asyncio]>=2.0.25", # Async ORM with connection pooling
    "pydantic>=2.5.0",            # Runtime validation and serialization
    "pydantic-settings>=2.1.0",   # Environment-based configuration
    "httpx>=0.26.0",              # Async HTTP client with HTTP/2 support
    "asyncpg>=0.31.0",            # Fast PostgreSQL async driver
    "structlog>=24.0.0",          # Structured logging with context
    "asgi-correlation-id>=4.3.0", # Request ID correlation middleware
]

# Optional dependency groups for different use cases
[project.optional-dependencies]
# PostgreSQL database support
postgres = [
    "asyncpg>=0.29.0",
]

# SQLite async support
sqlite = [
    "aiosqlite>=0.19.0",
]

# MySQL database support
mysql = [
    "aiomysql>=0.2.0",
]

# Development tools and testing
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "rich>=13.0.0",  # Pretty console output for development
]

# Install all optional dependencies
all = [
    "eventually-backend[postgres,sqlite,mysql,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/eventually"
Repository = "https://github.com/yourusername/eventually"
Issues = "https://github.com/yourusername/eventually/issues"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["app"]

# UV-specific configuration
[tool.uv]
# Development dependencies managed by UV
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

# Ruff linter and formatter configuration
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "N805",  # first argument of a method should be named 'self'
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy type checking configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
